2001-02-15  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report-utilities.scm: Added functions to filter accounts
	by type, and helpers for calculating balances.

	* src/scm/commodity-utilities.scm: (gnc:make-exchange-function)
	now uses <gnc-monetary>.

	* src/scm/html-utilities.scm: (gnc:html-build-acct-table) major
	code cleanup. Added new function to generate a <html-table> of
	exchange rates.

	* src/scm/options-utilities.scm: Added function for another
	option.

	* src/scm/report/{pnl,account-summary}.scm: Added options.

2001-02-15  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/Account.h: Add prototype for SetSlots.

	* src/engine/Account.c (xaccAccountSetSlots): add func.

	* src/test/test-dom-converters1.c (main): Add return_value
	handling to better be a "check"able program.

	* src/test/test-date-converting.c (main): Add return_value
	handling to better be a "check"able program.

	* src/engine/kvp_frame.c (kvp_frame_get_frame): refactor to use
	glist func.
	(kvp_frame_parse_slash_path): extract from slashpath func
	(kvp_frame_get_frame_slash): refactor to use gslist func

	* src/test/test-dom-converters1.c
	(test_dom_tree_to_commodity_ref): Use no_engine version.

	* src/engine/sixtp-dom-parsers.c
	(dom_tree_to_commodity_ref_no_engine): rename func.
	(dom_tree_to_commodity_ref): Add func to do complete commodity
	creation including adding to engine cache.

2001-02-14  James LewisMoss  <jimdres@mindspring.com>

	* src/test/test-dom-converters1.c (Repository): fix mem leak.

	* src/engine/sixtp-dom-parsers.h (Repository): start of kvp code.

	* src/engine/sixtp-dom-parsers.c (Repository): fix mem leak.
	Start of kvp code.

	* src/engine/sixtp-dom-generators.c (Repository): fix mem leak.
	(Repository): Start of kvp code.

	* src/test/test-date-converting.c (Repository): Tests to make sure
	date <-> string converting strings work.

	* src/test/test-dom-converters1.c (Repository): Add tests for rest
	of converters.
